# Optimisation_101

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Matmul_1.sln  README.md  benchmark_results.csv  benchmark_visualization.ipynb
Practice/: Matrix.cpp  Matrix.h  Practice.vcxproj  Practice.vcxproj.filters  Source.cpp  linear_ind.cpp
benchmarks/: CMakeLists.txt  benchmark_SIMD.cpp  benchmark_array.cpp  benchmark_blocking.cpp  benchmark_matrix_multiplication.cpp  benchmark_memory.cpp  benchmark_parallel.cpp  mpi_benchmark_standalone.cpp
cmake/: CommonSettings.cmake
include/: BaseCase.h  Blocking.h  MemoryAllocation.h  Parallel.h  SIMD.h  SafeArray.h  matrix_multiplication.h
scripts/: run_benchmarks.sh
src/: BaseCase.cpp  Blocking.cpp  CMakeLists.txt  MemoryAllocation.cpp  Parallel.cpp  SIMD.cpp  SafeArray.cpp  main.cpp  matrix_multiplication.cpp
tests/: CMakeLists.txt  TestCorrectness.cpp
